--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,12 @@
   {% include scripts.html %}
 
   {% include google-analytics.html %}
+  
+  <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.4/lib/darkmode-js.min.js"></script>
+<script>
+  new Darkmode().showWidget();
+</script>
+  
 </body>
 
 </html>
