--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,8 @@
 ---
 layout: default
+published: true
 ---
-
+<!-- Bidvertiser2026986 -->
 <!-- Page Header -->
 {% if page.background %}
 <header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
